static/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment
  namespace: static
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-container
          image: nginx
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx
            - name: nginx-static-content
              mountPath: /var/www
      volumes:
        - name: nginx-config-volume
          persistentVolumeClaim:
            claimName: static-nginx-config
        - name: nginx-static-content
          persistentVolumeClaim:
            claimName: static-nginx-content
---
apiVersion: v1
kind: Service
metadata:
  name: static-service
  namespace: static
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: static-http
      protocol: TCP
      port: 80
      targetPort: 80
