static/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-ingress
  namespace: static
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - static.prayujt.com
    secretName: static-certs
  rules:
  - host: static.prayujt.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: static-service
            port:
              number: 80
